--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,12 +2,28 @@
  CONFIG_ZMK_RGB_UNDERGLOW=y
  CONFIG_WS2812_STRIP=y
  
+### added by alex
+CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=20
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=40
+ 
  
 
 # Uncomment the following line to enable the Corne OLED Display
  CONFIG_ZMK_DISPLAY=y
 
 
+# Alex - Engable OLED
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 
+# Alex - Enable Sleep
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_IDLE_TIMEOUT=8000
 
- # alex uncommented them, off by default
+#CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y --> not a feature yet
+
+#CONFIG_SERIAL=y
+
+CONFIG_BT_MAX_CONN=2
