--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,6 +3,7 @@
  CONFIG_WS2812_STRIP=y
  
 ### added by alex
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=100
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=20
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=40
@@ -10,17 +11,16 @@ CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=40
  
 
 # Uncomment the following line to enable the Corne OLED Display
- CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 
 # Alex - Engable OLED
-CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 
 # Alex - Enable Sleep
-CONFIG_ZMK_SLEEP=n
-CONFIG_ZMK_IDLE_TIMEOUT=8000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=900000
 
 #CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y --> not a feature yet
 
